--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -131,7 +131,7 @@
       <div class="nav-scroller py-1 mb-3 border-bottom">
         <nav class="nav nav-underline justify-content-between">
           <a class="nav-item nav-link link-body-emphasis active" href="">Home</a>
-          <a class="nav-item nav-link link-body-emphasis" href="{% url "study" %}">Study</a>
+          <a class="nav-item nav-link link-body-emphasis" href="">Study</a>
           <a class="nav-item nav-link link-body-emphasis" href="">My Word Lists</a>
           <a class="nav-item nav-link link-body-emphasis" href="">Statistic</a>
         </nav>
