--- a/base/templates/base/study.html
+++ b/base/templates/base/study.html
@@ -13,7 +13,6 @@
         position: relative;
         width: 100%;
         height: 100%;
-        text-align: center;
         transition: transform 0s;
         transform-style: preserve-3d;
       }
@@ -23,13 +22,13 @@
         height: 100%;
         backface-visibility: hidden;
         display: flex;
-        justify-content: center;
-        align-items: center;
         padding: 20px;
         border-radius: 8px;
       }
       .flashcard-front {
         background-color: #f8f9fa;
+        justify-content: center;
+        align-items: center;
       }
       .flashcard-back {
         background-color: #f8f9fa;
@@ -57,24 +56,30 @@
     <div class="flashcard">
       <div class="flashcard-inner">
         <div class="flashcard-front card">
-          <div class="card-body row">
-              <div class="col-md-8">
-                <h5>Definition</h5>
-                <p id="wordDefinition">word.definition</p>
-                <p id="wordMean">word.mean</p>
-                <h5>Examples</h5>
-                <p id="wordExample">word.example|safe</p><br>
-                <p id="wordSynonym"></p>
-                <p id="wordImage"></p>
-              </div>
-              <div class="col-md-4">
-                  <img src="/media/images/words/ronaldo.jpg" class="img-fluid" alt="Responsive image">
-              </div>
+          <div class="card-body">
+            <h1 id="word"></h1>
+            <p id="type"></p> 
+            <p id="pronunciation"></p><span id="level" class="badge rounded-pill text-bg-primary"></span>
           </div>
         </div>
         <div class="flashcard-back card">
-          <div class="card-body">
-            <h5 id="answer" class="card-title">Answer</h5>
+          <div class="card-body row">
+            <div class="col-md-8">
+              <h5>Definition:</h5>
+              <p id="id" style="display:none"></p>
+              <p id="definition"></p>
+              <p id="meanning"></p>
+              <h5>Examples:</h5>
+              <p id="example"></p><br>
+              <h5>Note:</h5>
+              <p id="note"></p>
+              <h5>Memory level:</h5>
+              <p id="memoryLevel"></p>
+            </div>
+            <div class="col-md-4">
+                <img id="image" src="" class="img-fluid" alt="Responsive image">
+            </div>
+            
           </div>
         </div>
       </div>
@@ -100,8 +105,17 @@
     // Chuyển đổi đối tượng JSON sang mảng yêu cầu
     const vocabulary = words.map(item => {
       return {
+          id: item.pk,
           word: item.fields.word,
           definition: item.fields.definition,
+          type: item.fields.type,
+          pronunciation: item.fields.pronunciation,
+          level: item.fields.level,
+          meanning: item.fields.meanning,
+          example: item.fields.example,
+          note: item.fields.note,
+          memoryLevel: item.fields.memoryLevel,
+          image: item.fields.image,
       };
     });
 
@@ -109,14 +123,30 @@
     let isClickable = true; // Biến để theo dõi trạng thái của các nút
   
     function updateFlashcard() {
+      const idElement = document.getElementById("id");
       const wordElement = document.getElementById("word");
       const definitionElement = document.getElementById("definition");
-      const answerElement = document.getElementById("answer");
+      const typeElement = document.getElementById("type");
+      const pronunciationElement = document.getElementById("pronunciation");
+      const levelElement = document.getElementById("level");
+      const meanningElement = document.getElementById("meanning");
+      const exampleElement = document.getElementById("example");
+      const noteElement = document.getElementById("note");
+      const memoryLevelElement = document.getElementById("memoryLevel");
+      const imageElement = document.getElementById("image");
   
       const currentWord = vocabulary[currentIndex];
+      idElement.textContent = currentWord.id;
       wordElement.textContent = currentWord.word;
       definitionElement.textContent = currentWord.definition;
-      answerElement.textContent = currentWord.answer;
+      typeElement.textContent = currentWord.type;
+      pronunciationElement.textContent = currentWord.pronunciation;
+      levelElement.textContent = currentWord.level;
+      meanningElement.textContent = currentWord.meanning;
+      exampleElement.textContent = currentWord.example;
+      noteElement.textContent = currentWord.note;
+      memoryLevelElement.textContent = currentWord.memoryLevel;
+      imageElement.src = currentWord.image;
     }
   
     document.querySelector('.flashcard-inner').addEventListener('click', function() {
@@ -158,16 +188,64 @@
   
     document.getElementById("easyButton").addEventListener("click", function() {
       handleButtonClick("Easy", "easyIcon");
+      const idWord = document.getElementById("id").textContent;
+      updateWord("easy", idWord)
     });
   
     document.getElementById("mediumButton").addEventListener("click", function() {
       handleButtonClick("Medium", "mediumIcon");
+      const idWord = document.getElementById("id").textContent;
+      updateWord("medium", idWord)
     });
   
     document.getElementById("hardButton").addEventListener("click", function() {
       handleButtonClick("Hard", "hardIcon");
+      const idWord = document.getElementById("id").textContent;
+      updateWord("hard", idWord)
     });
   
     updateFlashcard(); // Initialize the first word
+
+    function updateWord(level, idWord) {
+      fetch('/update_word/', {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/x-www-form-urlencoded',
+            'X-CSRFToken': getCookie('csrftoken')
+          },
+          body: new URLSearchParams({'level': level, 'idWord': idWord})
+      })
+      .then(response => {
+          if (!response.ok) {
+              throw new Error('Network response was not ok');
+          }
+          return response.json();
+      })
+      .then(data => {
+          return data.subtitleID;
+      })
+      .catch(error => {
+          console.error('There was an error with the fetch operation:', error);
+      });
+      
+    }
+
+        // Function to retrieve CSRF token from cookies
+    function getCookie(name) {
+      let cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+          const cookies = document.cookie.split(';');
+          for (let i = 0; i < cookies.length; i++) {
+              const cookie = cookies[i].trim();
+              // Check if the cookie contains the specified name
+              if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                  cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                  break;
+              }
+          }
+      }
+      return cookieValue;
+    }
+
   </script>
 {% endblock content %}
